--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: spacey0409/qd_98:1.0.0
     command: python3 /app/main.py
     volumes:
-      - /Users/joey/Downloads/conf.yaml:/app/conf.yaml
+      - /app/conf.yaml:/app/conf.yaml
     restart: always
     network_mode: host
     hostname: qd_98
